# android-inaetics

./: README.md  README.md~  celix.sh  demonstrator.sh  libraries.sh  toolchains.sh
celix/: CMakeLists.txt  README.md  config.h.in
celix/build-arm/: CMakeCache.txt  CPackConfig-Installation.cmake  Makefile  cmake_install.cmake  install_manifest_dependency_manager.txt  install_manifest_deployment_admin.txt  (+13 more)
celix/build-arm-v7a/: CMakeCache.txt  CPackConfig-Installation.cmake  Makefile  cmake_install.cmake  config.h  install_manifest_dependency_manager.txt  install_manifest_deployment_admin.txt  install_manifest_discovery_configured.txt  install_manifest_discovery_etcd.txt  install_manifest_dm_shell.txt  install_manifest_framework.txt  install_manifest_log_service.txt  install_manifest_log_writer.txt  install_manifest_remote_service_admin.txt  install_manifest_remote_service_admin_dfi.txt  install_manifest_remote_service_admin_http.txt  install_manifest_remote_shell.txt  install_manifest_shell.txt  install_manifest_shell_tui.txt  install_manifest_topology_manager.txt
demonstrator/: Makefile  README.md  cmake_install.cmake
demonstrator/org.inaetics.demonstrator.celix.implementation/shake_detection_android/: CMakeLists.txt  CMakeLists.txt~
demonstrator/org.inaetics.demonstrator.celix.implementation/shake_detection_android/private/include/: shakedetection_impl.h  shakedetection_impl.h~
demonstrator/org.inaetics.demonstrator.celix.implementation/shake_detection_android/private/src/: activator.c  activator.c~  shakedetection.c~  shakedetection_impl.c  test.c~
(+341 files in other folders)
